# CVC4

./: LOG  NEWS  configure.ac
config/: antlr.m4
contrib/: get-antlr-3.4
examples/api/: Makefile.am  example_from_cav10.m  qtest.cpp  smt_omega.cpp  smt_omega.h
proofs/lfsc_checker/: check.cpp  check.h  code.cpp
proofs/signatures/: smt.plf  th_arrays.plf  th_base.plf
src/: Makefile.am
src/compat/: cvc3_compat.cpp
src/decision/: options_handlers.h
src/expr/: expr_manager_template.cpp  expr_manager_template.h  expr_template.h  node.h  type.cpp  type.h
src/main/: command_executor.cpp  command_executor.h  driver_unified.cpp  options_handlers.h
src/options/: base_options_handlers.h  options.h  options_template.cpp
src/parser/: Makefile.am  antlr_input.cpp  antlr_input.h  input.cpp
src/parser/cvc/: Cvc.g  Makefile.am  cvc_input.cpp  cvc_input.h
src/parser/mjollnir/: Makefile  Makefile.am  Mjollnir.g  mjollnir_input.cpp  mjollnir_input.h
src/parser/smt1/: Makefile.am  Smt1.g  smt1_input.cpp  smt1_input.h
src/parser/smt2/: Makefile.am  Smt2.g  smt2.cpp  smt2_input.cpp  smt2_input.h
src/parser/tptp/: Makefile.am  Tptp.g  tptp.cpp  tptp_input.cpp  tptp_input.h
src/printer/: dagification_visitor.cpp  dagification_visitor.h  options_handlers.h
src/printer/ast/: ast_printer.cpp
src/printer/cvc/: cvc_printer.cpp  cvc_printer.h
src/printer/smt2/: smt2_printer.cpp
src/proof/: cnf_proof.cpp  cnf_proof.h  proof_manager.cpp  proof_manager.h  sat_proof.cpp  sat_proof.h  theory_proof.cpp  theory_proof.h
src/prop/: Makefile.am  cnf_stream.cpp  cnf_stream.h  options  options_handlers.h  prop_engine.cpp  prop_engine.h  sat_solver.h  sat_solver_types.h
src/prop/minisat/: minisat.cpp  minisat.h
src/prop/minisat/core/: Solver.cc  Solver.h
src/smt/: Makefile.am  boolean_terms.h  interpreted_attr.h  options  options_handlers.h  smt_engine.cpp  smt_engine.h  smt_engine_check_proof.cpp
src/tactic/: Makefile  Makefile.am  identity.h  tactic.h
src/theory/: Makefile.am  Makefile.subdirs  ite_utilities.h  logic_info.cpp  model.cpp  model.h  options_handlers.h  output_channel.h  term_registration_visitor.cpp  theory.h  theory_engine.cpp  theory_engine.h  theory_test_utils.h  valuation.cpp
src/theory/arith/: cut_log.h  options_handlers.h  theory_arith_type_rules.h
src/theory/arrays/: array_info.h  kinds  theory_arrays.cpp  theory_arrays.h  theory_arrays_type_rules.h
src/theory/booleans/: circuit_propagator.cpp  circuit_propagator.h  options_handlers.h  theory_bool.cpp  theory_bool_rewriter.cpp
src/theory/builtin/: kinds
src/theory/bv/: aig_bitblaster.cpp  options_handlers.h
src/theory/quantifiers/: ambqi_builder.cpp  bounded_integers.cpp  first_order_model.cpp  full_model_check.cpp  kinds  model_engine.cpp  options_handlers.h  qinterval_builder.cpp  theory_quantifiers_type_rules.h
src/theory/uf/: equality_engine.cpp  equality_engine.h  equality_engine_types.h  kinds  theory_uf.cpp  theory_uf.h  theory_uf_strong_solver.cpp  theory_uf_type_rules.h
src/util/: datatype.i  language.cpp  language.h  proof.h  statistics_registry.cpp  statistics_registry.h  unsat_core.h
test/regress/: run_regression
test/regress/regress0/datatypes/: Makefile.am  boolean-terms-array-record.cvc  bug500.cvc
test/unit/theory/: theory_engine_white.h  theory_white.h
